--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whiskyfun",
+  "name": "HappyDrinker.com",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
+    "element-plus": "^2.1.0",
     "swiper": "^6.8.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
