meta title/description

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HappyDrinker.com",
+  "name": "HappyDrinker-WhiskyReviews",
   "version": "0.1.0",
   "private": true,
   "scripts": {
