--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-plus": "^2.1.0",
     "swiper": "^6.8.4",
     "vue": "^3.0.0",
+    "vue-loading-overlay": "^5.0.3",
     "vue-router": "^4.0.0-0",
     "vue3-lazyload": "^0.2.5-beta",
     "vuex": "^4.0.0-0"
